tests-integration/fixtures/checking/123_incomplete_instance_head/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
pair ::
  forall (a :: Type) (b :: Type).
    Pair (a :: Type) (b :: Type) =>
    (a :: Type) -> (b :: Type) -> { a :: (a :: Type), b :: (b :: Type) }

Types
Pair :: Type -> Type -> Constraint

Classes
class Pair (a :: Type) (b :: Type)

Instances
instance Pair (Int :: Type) (String :: Type)
  chain: 0
instance Pair (Int :: Type)
  chain: 0

Diagnostics
error[InstanceHeadMismatch]: Instance head mismatch: expected 2 arguments, got 1
  --> 9:1..10:28
  |
9 | instance Pair Int where
  | ^~~~~~~~~~~~~~~~~~~~~~~
